tests/expectations/compiler/mappings/too_many_mappings_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372062]: The number of mappings exceeds the maximum. snarkVM allows up to 31 mappings within a single program.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
